XXXX-XX-XX pynote 0.1b4
-----------------------

* Do not create a new revision if there are no changes, see #277.
* Improved pynote.__main__ code. If no command is entered just
  choose note list, see #288.
* note trash works again, see #278.


2013-12-18 pynote 0.1b3
-----------------------

* Dateformat can be set in ~/.noterc. Please refer to docs.python.org,
  strftime and strptime behavior.
* Compare command. Compare two revisions of a note by creating a
  unified diff.
* You only have to set your data dir in ~/.noterc. Like data = ~/.note.
* Do not display an empty table if there is no data, see #254.
* The root section in ~/.noterc must be [DEFAULT]. The previous values
  do not work any more!
* Add every revision to versions.json, see #276.


2013-12-10 pynote 0.1b2
-----------------------

* fixed setup.py, see #255.


2013-12-10 pynote 0.1b1
-----------------------

* Initial release.