@@ -5,6 +5,8 @@ XXXX-XX-XX pynote 0.1b4
 * Improved pynote.__main__ code. If no command is entered just
   choose note list, see #288.
 * note trash works again, see #278.
+* Added a note restore command to restore deleted notes from trash,
+  see #281.
 
 
 2013-12-18 pynote 0.1b3
